# uk_housing_market_analysis

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uk-housing.code-workspace
configs/: pipeline.yaml
data/processed/: uk_housing_data.csv
infrastructure/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.pipeline
notebooks/: analysis_code.ipynb  requirements.txt
notebooks/.github/workflows/: deploy.yml
notebooks/01_eda/: 01_eda.ipynb
notebooks/02_feature_engineering/: 02_feature_engineering.ipynb
notebooks/03_modelling/: 03_modelling.ipynb
notebooks/04_evaluation/: 04_evaluation.ipynb
notebooks/docker/: Dockerfile.api
notebooks/src/: dashboard.py
src/api/: api.py
src/dashboard/: app.py
