[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "uk-housing-analysis"
version = "0.1.0"
description = "UK Regional Housing Market Analysis — EDA, forecasting, and affordability scoring"
requires-python = ">=3.11"
dependencies = [
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "requests>=2.31",

    # EDA / Visualisation
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "folium>=0.16",

    # Modelling
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "statsmodels>=0.14",
    "prophet>=1.1",

    # MLOps
    "mlflow>=2.12",
    "optuna>=3.6",
    "shap>=0.45",

    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",

    # Dashboard
    "streamlit>=1.35",
    "streamlit-folium>=0.20",

    # Utils
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "typer>=0.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",         # FastAPI test client
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.scripts]
uk-housing = "src.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
